Fixed css for overflow and draggable

--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   min-height: 100%;
+  overflow: hidden;
 }
 
 html {
